@@ -1,3 +1,4 @@
+* Support validate attribute of wizard's Button
 * Add infinite scroll
 
 Version 5.4.0 - 2019-11-04
